Added JUnit Test Cases